--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -722,7 +722,7 @@
                     <navigationItem key="navigationItem" title="Categories" id="wdQ-AK-HzA">
                         <barButtonItem key="rightBarButtonItem" title="Item" style="plain" id="4H3-DM-Vpx">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Rzu-Rx-9MQ">
-                                <rect key="frame" x="313" y="13" width="32" height="32"/>
+                                <rect key="frame" x="309" y="6" width="50" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="Button"/>
                                 <connections>
@@ -855,13 +855,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="NavBackground_Com" translatesAutoresizingMaskIntoConstraints="NO" id="rb6-vk-YG9">
-                                <rect key="frame" x="0.0" y="-3" width="375" height="241"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NavBackground_Com" translatesAutoresizingMaskIntoConstraints="NO" id="rb6-vk-YG9">
+                                <rect key="frame" x="0.0" y="-40" width="375" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="awt-H6-uau"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELK-S7-N0Z">
-                                <rect key="frame" x="17" y="249" width="301" height="53"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELK-S7-N0Z">
+                                <rect key="frame" x="17" y="200" width="294" height="48"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Comunnication  ">
                                         <attributes>
@@ -873,22 +874,23 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" text="A process by which information is exchanged between individuals through a common system of symbols, signs, or behavior." adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="caw-5a-zJJ">
-                                <rect key="frame" x="17" y="310" width="337" height="75"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" text="A process by which information is exchanged between individuals through a common system of symbols, signs, or behavior." adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="caw-5a-zJJ">
+                                <rect key="frame" x="17" y="270" width="341" height="73.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" red="0.10980392156862745" green="0.10980392156862745" blue="0.11764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="Divisória" translatesAutoresizingMaskIntoConstraints="NO" id="b4R-QH-ec4">
-                                <rect key="frame" x="16" y="393" width="344" height="1"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Divisória" translatesAutoresizingMaskIntoConstraints="NO" id="b4R-QH-ec4">
+                                <rect key="frame" x="15.5" y="351.5" width="344" height="1"/>
                                 <color key="tintColor" red="0.76862745098039209" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="344" id="N3A-oR-fS3"/>
+                                    <constraint firstAttribute="height" constant="1" id="sPY-it-thk"/>
+                                </constraints>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="auL-dh-9IZ">
-                                <rect key="frame" x="0.0" y="424" width="375" height="243"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="auL-dh-9IZ">
+                                <rect key="frame" x="0.0" y="384" width="375" height="283"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="activities" rowHeight="111" id="CWz-8i-05L" customClass="ActivitiesCommunicationTableViewCell" customModule="romance" customModuleProvider="target">
@@ -898,11 +900,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="111"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JyV-cY-uul">
-                                                    <rect key="frame" x="42" y="12" width="291" height="88"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JyV-cY-uul">
+                                                    <rect key="frame" x="42" y="11.5" width="291" height="88"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="88" id="ZET-O5-Ejj"/>
+                                                        <constraint firstAttribute="width" constant="291" id="x90-nk-V3Z"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="JyV-cY-uul" firstAttribute="centerX" secondItem="1vb-qS-wFm" secondAttribute="centerX" id="pAx-md-t8l"/>
+                                                <constraint firstItem="JyV-cY-uul" firstAttribute="centerY" secondItem="1vb-qS-wFm" secondAttribute="centerY" id="umk-Dl-ksO"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="activityImage" destination="JyV-cY-uul" id="N6O-oN-uoZ"/>
@@ -914,15 +923,33 @@
                                     <outlet property="delegate" destination="lBF-HX-uKY" id="Egl-d9-GIf"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Activities" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahe-0k-Bze">
-                                <rect key="frame" x="16" y="388" width="301" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activities" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahe-0k-Bze">
+                                <rect key="frame" x="14" y="357.5" width="347" height="29"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="24"/>
                                 <color key="textColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ELK-S7-N0Z" firstAttribute="top" secondItem="rb6-vk-YG9" secondAttribute="bottom" id="0a8-ey-JGn"/>
+                            <constraint firstItem="caw-5a-zJJ" firstAttribute="top" secondItem="ELK-S7-N0Z" secondAttribute="bottom" constant="22" id="0hC-9G-cJy"/>
+                            <constraint firstItem="feZ-rQ-uG9" firstAttribute="trailing" secondItem="caw-5a-zJJ" secondAttribute="trailing" constant="17" id="1vL-fG-HWp"/>
+                            <constraint firstItem="rb6-vk-YG9" firstAttribute="trailing" secondItem="feZ-rQ-uG9" secondAttribute="trailing" id="61k-5S-NGc"/>
+                            <constraint firstItem="feZ-rQ-uG9" firstAttribute="trailing" secondItem="ahe-0k-Bze" secondAttribute="trailing" constant="14" id="7w3-Sz-eBi"/>
+                            <constraint firstItem="caw-5a-zJJ" firstAttribute="leading" secondItem="feZ-rQ-uG9" secondAttribute="leading" constant="17" id="9Aa-qu-p7z"/>
+                            <constraint firstItem="ahe-0k-Bze" firstAttribute="leading" secondItem="feZ-rQ-uG9" secondAttribute="leading" constant="14" id="H31-Hs-78e"/>
+                            <constraint firstItem="auL-dh-9IZ" firstAttribute="leading" secondItem="feZ-rQ-uG9" secondAttribute="leading" id="Nm0-Bg-mVJ"/>
+                            <constraint firstItem="ELK-S7-N0Z" firstAttribute="leading" secondItem="feZ-rQ-uG9" secondAttribute="leading" constant="17" id="UIl-cy-iW0"/>
+                            <constraint firstItem="auL-dh-9IZ" firstAttribute="top" secondItem="b4R-QH-ec4" secondAttribute="bottom" constant="31.5" id="bPM-55-nDe"/>
+                            <constraint firstItem="ahe-0k-Bze" firstAttribute="top" secondItem="b4R-QH-ec4" secondAttribute="bottom" constant="5" id="bzi-eh-Ab8"/>
+                            <constraint firstItem="b4R-QH-ec4" firstAttribute="centerX" secondItem="caw-5a-zJJ" secondAttribute="centerX" id="dQv-Ss-fnZ"/>
+                            <constraint firstItem="auL-dh-9IZ" firstAttribute="bottom" secondItem="feZ-rQ-uG9" secondAttribute="bottom" id="eun-hd-vpY"/>
+                            <constraint firstItem="auL-dh-9IZ" firstAttribute="trailing" secondItem="feZ-rQ-uG9" secondAttribute="trailing" id="tpU-iD-9gO"/>
+                            <constraint firstItem="rb6-vk-YG9" firstAttribute="leading" secondItem="feZ-rQ-uG9" secondAttribute="leading" id="vL7-x1-2JE"/>
+                            <constraint firstItem="b4R-QH-ec4" firstAttribute="top" secondItem="caw-5a-zJJ" secondAttribute="bottom" constant="8" id="vpA-O2-rFt"/>
+                            <constraint firstItem="rb6-vk-YG9" firstAttribute="top" secondItem="feZ-rQ-uG9" secondAttribute="top" constant="-40" id="zvd-aT-rgM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="feZ-rQ-uG9"/>
                     </view>
                     <navigationItem key="navigationItem" id="OwU-yC-3Cx"/>
@@ -1215,9 +1242,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zrS-vk-vOM">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zrS-vk-vOM">
                                 <rect key="frame" x="32" y="181" width="311" height="223"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="TwoQuests" translatesAutoresizingMaskIntoConstraints="NO" id="QsN-Lv-pPU">
                                         <rect key="frame" x="28" y="13" width="254" height="196"/>
@@ -1242,6 +1268,10 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zrS-vk-vOM" firstAttribute="centerX" secondItem="dPG-pE-b0f" secondAttribute="centerX" id="D9T-0t-Yrw"/>
+                            <constraint firstItem="zrS-vk-vOM" firstAttribute="centerY" secondItem="dPG-pE-b0f" secondAttribute="centerY" id="ZrU-q4-cgL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="1T0-Ld-ofe"/>
                     </view>
                     <navigationItem key="navigationItem" id="LL3-0S-0Th">
@@ -1452,7 +1482,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BackOfCard_Din2" width="335" height="475"/>
+        <image name="BackOfCard_Din2" width="342" height="487"/>
         <image name="Background" width="375" height="667"/>
         <image name="BackgroundBlue" width="375" height="667"/>
         <image name="Balao1_ShakeScreen" width="198" height="204"/>
